--- a/HowTos/fips140-2.rst
+++ b/HowTos/fips140-2.rst
@@ -6,7 +6,7 @@
 FIPS 140-2 Module
 ###################################
 
-Aviatrix OpenVPN supports the FIPS 140-2 crypto module.
+Aviatrix supports the FIPS 140-2 crypto module.
 
 The Aviatrix Certificate number is #3475 which you can find from the `NIST site <https://csrc.nist.gov/projects/cryptographic-module-validation-program/certificate/3475>`_.
 
